--- a/06-template-readme.Rmd
+++ b/06-template-readme.Rmd
@@ -1,7 +1,8 @@
 ---
-title: "Part 1b: Template README and Reproducible Practices"
+title: "Part 6: Template README and Reproducible Practices"
 author: 
   - "Lars Vilhuber"
+  - "Marie Connolly"
 date: "`r Sys.Date()`"
 output: 
   ioslides_presentation:
