--- a/01-very-imperfect-example.Rmd
+++ b/01-very-imperfect-example.Rmd
@@ -21,6 +21,7 @@ widescreen: true
 :::: {.column}
 
 - A Github package with a paper, code, data
+- [https://github.com/labordynamicsinstitute/very-imperfect-example](https://github.com/labordynamicsinstitute/very-imperfect-example)
 
 ::::
   
@@ -72,43 +73,13 @@ knitr::include_url("https://github.com/labordynamicsinstitute/very-imperfect-exa
 
 ## Your turn
 
-- Download the "very imperfect example"
+- Download the "very imperfect example" [https://github.com/labordynamicsinstitute/very-imperfect-example](https://github.com/labordynamicsinstitute/very-imperfect-example)
 - Reproduce Table 1
 - You have 10 minutes
 
-## Top chrono
-
-```{=html}
-<p id="demo" style="text-align: center;font-size: 60px;margin-top: 0px;"></p>
-
-<script>
-// Set the date we're counting down to - units are 1/1000 s
-var start = new Date().getTime() + (11 * 60 * 1000);
-
-// Update the count down every 1 second
-var x = setInterval(function() {
-
-  // Get today's date and time
-  var now = new Date().getTime();
-
-  // Find the distance between now and the count down date
-  var distance = start - now;
-
-  // Time calculations for days, hours, minutes and seconds
-  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-  // Display the result in the element with id="demo"
-  document.getElementById("demo").innerHTML =  minutes + "m " + seconds + "s ";
-
-  // If the count down is finished, write some text
-  if (distance < 0) {
-    clearInterval(x);
-    document.getElementById("demo").innerHTML = "FINISHED";
-  }
-}, 1000);
-</script>
+```{r, child=c('counter10.md')}
 ```
+
 
 ## Next
 
