--- a/02-how-to-install-Stata-packages.Rmd
+++ b/02-how-to-install-Stata-packages.Rmd
@@ -139,6 +139,59 @@ adopath ++ "${rootdir}/adofiles"
   [4]              "."
 ```
 
+## Side-note: should you cite Stata packages?
+
+Some of the most common Stata packages are heavily used:
+
+```
+. ssc, hot
+
+ Rank   # hits    Package       Author(s)
+  ----------------------------------------------------------------------
+     1  98781.5    outreg2       Roy Wada                                
+     2  82108.0    distinct      Gary Longton, Nicholas J. Cox           
+     3  76510.6    estout        Ben Jann                                
+     4  75270.7    geodist       Robert Picard                           
+     5  73775.4    labutil       Nicholas J. Cox                    
+```
+
+## Econ papers use different packages
+
+| Package | Percent | 
+|---------|---------|
+|    estout        |  14.02  |
+|   outreg2        |   8.88  |
+|   reghdfe        |   6.54  |
+|    ftools        |   5.61  |
+|  coefplot        |   5.14  |
+|  outtable        |   2.34  |
+|   parmest        |   2.34  |
+|    ivreg2        |   1.87  |
+
+## What is a software citation?
+
+> Ben Jann, 2004. "ESTOUT: Stata module to make regression tables," Statistical Software Components S439301, Boston College Department of Economics, revised 12 Feb 2023. 
+
+
+## Why does it matter?
+
+Citations are the currency in the sciences
+
+[Acemoglu Google Scholar page](images/google-scholar-acemoglu.png)
+
+## We cannot really measure who relies on software packages
+
+We only know the relative frequency because 
+
+- we downloaded every AEA package, 
+- ran it, 
+- determined which packages were missing, installed them, and ran again...
+- and then counted them. 
+
+# You should cite software packages!
+
+We will get back to citations, of data, later.
+
 ## Next
 
 How do we set `$rootdir` ?
