--- a/00-agenda.Rmd
+++ b/00-agenda.Rmd
@@ -14,19 +14,19 @@ widescreen: true
 ```{r, child=c('toc.md')}
 ```
 
-## Details {.smaller}
+## Détails {.smaller}
 
-- 9:00 Bienvenu
+- 9:00 Bienvenue
 - 9:15 Description de l'agenda pour les deux jours 
-- 9:30 Discussion sur les pré-requis technique, possiblement formation d'équipe
+- 9:30 Discussion sur les pré-requis techniques, possiblement formation d'équipes
 - 9:45 Description de l'exemple très imparfait 
   - [github.com/labordynamicsinstitute/very-imperfect-example](https://github.com/labordynamicsinstitute/very-imperfect-example)
   - Comment télécharger de Github
-  - Repliquons!
+  - Répliquons!
 
-## Details {.smaller}
+## Détails {.smaller}
 
-- 10:15 Discussion de la réussite de l'exercise
+- 10:15 Discussion de la réussite de l'exercice
 - 10:30 Pause
 - 10:45 Commençons par la fin: (live/ slides coming)
   - Documentation of Stata packages
@@ -36,7 +36,7 @@ widescreen: true
   - Suggestion: how to cite them!
 
 
-## Details {.smaller}
+## Détails {.smaller}
 
 - 11:15 Next: How to run Stata
   - Table ronde: comment est-ce que tu fais rouler Stata? (15 min)
@@ -51,13 +51,13 @@ widescreen: true
   - Try it out (30 minutes)
 
 
-## Details {.smaller}
+## Détails {.smaller}
 
 - 12:30 Lunch (1h)
 
 
 
-## Details {.smaller}
+## Détails {.smaller}
 
 - 13:30 Side-note: how to run things in the cloud (90 minutes)
   - C'est quoi, le cloud?
@@ -68,7 +68,7 @@ widescreen: true
 - 15:00 Break
 
 
-## Details {.smaller}
+## Détails {.smaller}
 
 - 15:15 How to structure a project (Marie) (45 minutes)
 - 16:00 Try it out / Fin
@@ -80,7 +80,7 @@ widescreen: true
 ```{r, child=c('toc2.md')}
 ```
 
-## Details {.smaller}
+## Détails {.smaller}
 
 - 9:00 Documenting it all: the template README (Marie) (60 minutes)
   - [https://social-science-data-editors.github.io/template_README/](https://social-science-data-editors.github.io/template_README/)
@@ -93,28 +93,28 @@ widescreen: true
   - Source of the US Census data 
   - Authoritative vs. random sources
 
-## Details {.smaller}
+## Détails {.smaller}
 
 - 10:30 When data cleaning is critical
   - Your project doesn't start with the analysis data (no "trust me")
   - Find the problem!
   - Try it out: 30 minutes
 
-## Details {.smaller}
+## Détails {.smaller}
 
 - 11:00 Completing the template README
   - Documenting data provenance
   - The role of licenses and permissions 
 - 12:00 Break (1h)
 
-## Details {.smaller}
+## Détails {.smaller}
 
 - 13:00 Creating a replication package
   - So you have it all?
   - Let's try that again: Run your neighbor's replication package in 10 minutes
   - (30 minutes)
   
-## Details {.smaller}
+## Détails {.smaller}
 
 - 13:30 Depositing a replication package
   - 	https://labordynamicsinstitute.github.io/tutorial-data-sharing-archiving-2021/ 
@@ -125,7 +125,7 @@ widescreen: true
   - Updating a replication package
 - 14:30  Break
 
-## Details {.smaller}
+## Détails {.smaller}
 
 - 14:45 Wrap-up
   - Group discussion
