Updates to the licensing tutorial

--- a/07-data-provenance.Rmd
+++ b/07-data-provenance.Rmd
@@ -1,7 +1,8 @@
 ---
-title: "Part 2: Guidance on data citations"
+title: "Part 7: Data citations and Provenance"
 author: 
   - "Lars Vilhuber"
+  - "Marie Connolly"
 date: "`r Sys.Date()`"
 output: 
   ioslides_presentation:
