Updates to toc inclusions

--- a/03-how-to-run-stata.Rmd
+++ b/03-how-to-run-stata.Rmd
@@ -288,3 +288,7 @@ If you decide the code needs to be run in pieces (this is NOT ideal)
 When debugging is complete, you can uncomment all programs in the master and make a clean run, using again `Execute Quietly (run)`.
 
 > Consider how much time a complete run would take before you run everything one last time. If it would take too long, you may want to skip a complete run, but ensure that you have log files for all partial runs. Make a note of this in the report.
+
+
+```{r, child=c('toc2.md')}
+```
